[package]
name = "glif2svg"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glifparser = {git = "https://github.com/MFEK/glifparser.rlib", features=["skia"]}
mfek-ipc = {git = "https://github.com/MFEK/ipc.rlib"}
skia-safe = "0"
clap = "2"
xmltree = "0.10"
