[package]
name = "glif2svg"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glifparser = {git = "https://github.com/MFEK/glifparser.rlib", features=["skia"]}
mfek-ipc = {git = "https://github.com/MFEK/ipc.rlib"}
skia-safe = "0"
clap = "2"
xmltree = {git = "https://github.com/MFEK/xmltree.rlib", features=["attribute-order"]}
derivative = "2.2"
float-cmp = "0.9"
phf = { version = "=0.10.1", features = ["macros"] }

[profile.release]
opt-level = 3
lto = true
